--- a/app/views/reportes/show.html.haml
+++ b/app/views/reportes/show.html.haml
@@ -7,7 +7,7 @@
 -#de reportes:
 = turbo_frame_tag dom_id(@reporte) do
   = render @reporte 
-  -#render "reportes/comentarios", reporte: @reporte 
+  = render "reportes/comentarios", reporte: @reporte 
 
 
 -#::
